insta link fixed

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div class="social-links">
                 <a href="https://www.whatsapp.com/+923101509147" class="social-link">WA</a>
-                <a href="https://www/instagram.com/khushnood__ahmed" class="social-link">IG</a>
+                <a href="https://www.instagram.com/khushnood__ahmed" class="social-link">IG</a>
             </div>
         </section>
     </body>
