--- a/index.html
+++ b/index.html
@@ -1,89 +1,97 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Creative Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Creative Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="nav">
+        <div class="nameNav">
+            <h1>Khushnood Ahmad</h1>
+        </div>
+        <div class="nav-links">
+            <a href="#home">Home</a>
+            <a href="projects.html" target="_blank">Projects</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
+        </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
 
-    </head>
-    <body>
-        <nav class="nav">   
-            <div class="nav-links">
-                <a href="#home">Home</a>
-                <a href="#projects">Projects</a>
-                <a href="#skills">Skills</a>
-                <a href="#contact">Contact</a>
+    <section class="hero" id="home">
+        <div class="parent">
+            <section class="bio fade-in">
+                <h1>Welcome!</h1>
+                <p>I’m a passionate Computer Science student with strong programming skills in Python, Java, C++, and SQL.  
+                Always curious and driven, I love building projects, solving problems, and continuously learning new technologies.  
+                With a growing experience in software development, databases, and web technologies, I'm excited to make a meaningful impact in the tech world!</p>
+            </section>
+            <div class="image-container">
+                <img src="pic.png" alt="Khushnood Ahmad's profile picture" class="profile">
             </div>
-        </nav> 
+        </div>
+        <a href="#contact" class="cta-button">Get in Touch</a>
+    </section>
 
-        <section class="hero" id="home" style="background-image: url(purplebg.jpg);">
-            <div class="parent">
-                <div class="text-container" >
-                    <h1 style="text-decoration: underline; font-size:5rem">Khushnood Ahmad</h1>
-                    <h1 style="background-color: rgb(236, 159, 86); font-size:largest">Intermediate Java Developer</h1> 
-                    <br><br>
-                    <a href="#contact" class="cta-button">Get in Touch</a>
-                </div>
-
-                <div class="image-container">
-                    <img src="pic.png" alt="Hero Image" style="width: 400px; height: 400px;" class="profile" >
-                </div>
-            </div>
-        </section>
-
-        <section class="projects" id="projects">
-            <h2 class="section-title">Featured Projects</h2>
-            <div class="project-grid">
-                <div class="project-card">
-                    <div class="project-image"><img src="sodoku.png" width="750px" height="190px" alt=""></div>
-                    <div class="project-info">
-                        <h3>Sodoku Game</h3>
-                        <p>Made a Terminal-Based Sodoku using Python.</p>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image"><img src="todolist.png" width="500" height="200" alt=""></div>
-                    <div class="project-info">
-                        <h3>To-do List</h3>
-                        <p>A functional TO-DO-LIST using Java that  allows users to add, delete and mark tasks as completed.</p>
-
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image"><img src="banking.png" width="500px" height="195px" alt=""></div>
-                    <div class="project-info">
-                        <h3>Banking Management Systm</h3>
-                        <p>A Banking System that creats user accounts, allows users to deposit and withdraw money, and view their account balance.</p>
-
-                    </div>
+    <section class="projects" id="projects">
+        <h2 class="section-title fade-in">Featured Projects</h2>
+        <div class="project-grid">
+            <div class="project-card fade-in">
+                <div class="project-image"><img src="sodoku.png" alt="Sudoku Game Screenshot"></div>
+                <div class="project-info">
+                    <h3>Sudoku Game</h3>
+                    <p>Made a Terminal-Based Sudoku using Python.</p>
                 </div>
             </div>
-        </section>
-
-        <section class="skills" id="skills">
-            <h2 class="section-title">Skills & Expertise</h2>
-            <div class="skill-list">
-                <div class="skill-tag">Web Development</div>
-                <div class="skill-tag">Java</div>
-                <div class="skill-tag">Adobe Illustrator</div>
-                <div class="skill-tag">Adobe Photoshop</div>
-                <div class="skill-tag">Python</div>
-                <div class="skill-tag">Canva</div>
+            <div class="project-card fade-in">
+                <div class="project-image"><img src="todolist.png" alt="To-Do List Screenshot"></div>
+                <div class="project-info">
+                    <h3>To-do List</h3>
+                    <p>A functional TO-DO-LIST using Java that allows users to add, delete, and mark tasks as completed.</p>
+                </div>
             </div>
-        </section>
-
-        <section class="contact" id="contact">
-            <h2 class="section-title">Let's Connect</h2>
-            <p>Interested! Conatct me ASAP. Waiting for your response.</p>
-            <b>Contact:</b> 03101509147 <br>
-            <b>E-mail:</b> khushnoodahmed956@gmail.com
-            
-
-            <div class="social-links">
-                <a href="https://www.whatsapp.com/+923101509147" class="social-link">WA</a>
-                <a href="https://www.instagram.com/khushnood__ahmed" class="social-link">IG</a>
+            <div class="project-card fade-in">
+                <div class="project-image"><img src="banking.png" alt="Banking Management System Screenshot"></div>
+                <div class="project-info">
+                    <h3>Banking Management System</h3>
+                    <p>A Banking System that creates user accounts, allows users to deposit and withdraw money, and view their account balance.</p>
+                </div>
             </div>
-        </section>
-    </body>
-    </html>
+
+            </div>
+        </div>
+        <a href="projects.html" class="show-more-button" target="_blank">Show More Projects</a>
+    </section>
+
+    <section class="skills" id="skills">
+        <h2 class="section-title fade-in">Skills & Expertise</h2>
+        <div class="skill-list">
+            <div class="skill-tag">Web Development</div>
+            <div class="skill-tag">Java</div>
+            <div class="skill-tag">Adobe Illustrator</div>
+            <div class="skill-tag">Adobe Photoshop</div>
+            <div class="skill-tag">Python</div>
+            <div class="skill-tag">Canva</div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="section-title fade-in">Let's Connect</h2>
+        <p>Interested! Contact me ASAP. Waiting for your response.</p>
+        <p><b>Contact:</b> +923101509147</p>
+        <p><b>E-mail:</b> khushnoodahmed956@gmail.com</p>
+        <div class="social-links">
+            <a href="https://wa.me/+923101509147" class="social-link" aria-label="WhatsApp">WA</a>
+            <a href="https://www.instagram.com/khushnood__ahmed" class="social-link" aria-label="Instagram">IG</a>
+        </div>
+    </section>
+
+    <script src="script.js"></script>
+</body>
+</html>
