fixed projcts.html error

--- a/projects.html
+++ b/projects.html
@@ -133,7 +133,7 @@
             <h1>Khushnood Ahmad</h1>
         </div>
         <div class="nav-links">
-            <a href="INDEX1.HTML">Home</a>
+            <a href="index.HTML">Home</a>
             <a href="projects.html" target="_blank">Projects</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
